-= Fermion v0.3 =-

* Initial release of Fermion.

-= Fermion v0.4 =-

* Code cleanup.
* Added icons for Linux/OSX.
* README updates.
* Added changelog.

-= Fermion v0.5 =-

* Update to the Frida language bindings.
* Added example: DllLoadBehaviour, CallNativeFunction

-= Fermion v0.6 =-

* Pre-built release updated to Frida v12.6.8
* Added support for devices in addition to the local host (eg for mobile testing)
* Added example: AmsiScanBuffer, CoGetClassObject, wnf

-= Fermion v0.7 =-

* Pre-built release updated to Frida v12.6.16
* Added support allow users to launch an application instead of only being able to attach
* Added example: RdpThief, IOCTL_AFD_SEND_RECV

-= Fermion v0.8 =-

* Pre-built release updated to Frida v12.8.1
* Build updated/tested for Electron v7
* Updated language bindings: Fermion/assets/lang/frida.d.ts
* Electron compatibility changes for showOpenDialog & showSaveDialog

-= Fermion v0.9 =-

* Pre-built release updated to Frida v12.8.3
* Introduced a hotfix in Fermion for a device manager bug in the latest version of Frida
* Added a word wrap toggle
* Modified the behavior of Ctrl/Command-s to prompt to overwrite if the user previously saved or opened a file
* Locked the Frida version to v12.8.3 to avoid unexpected behaviour when people build against new versions. This can be changed in "package.json". New builds will have fixed, tested, updated version of Frida.
* Added example: DeviceIoControl, AndroidEnumerateLoadedClasses, MemSSP, EtwEventWrite

-= Fermion v1.0 =-

* Pre-built release updated to Frida v12.9.3
* Build updated/tested for Electron v8
* Updated language bindings: Fermion/assets/lang/frida.d.ts
* Added support to display runtime errors in the text area
* Added example: CallStalker, NotepadLogger

-= Fermion v1.1 =-

* Pre-built release updated to Frida v12.9.4
* Build updated/tested for Electron v9
* Added six new themes for the code editor